--- a/kikakusyo_project/templates/base.html
+++ b/kikakusyo_project/templates/base.html
@@ -17,6 +17,13 @@
             <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
             {% endif %}
         </nav>
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li class="alert alert-{{ message.tags }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         {% block content %}{% endblock %}
     </body>
 </html>
