--- a/kikakusyo_project/templates/base.html
+++ b/kikakusyo_project/templates/base.html
@@ -5,18 +5,22 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{% url 'accounts:home' %}">ホーム画面</a>
-            {% if user.is_authenticated %}
-            <a class="navbar-brand" href="{% url 'accounts:us_logout' %}">ログアウト</a>
-            <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
-            <a class="navbar-brand" href="{% url 'accounts:cyumon_info' %}">注文情報へ</a>
-            {% else %}
-            <a class="navbar-brand" href="{% url 'accounts:us_login' %}">ログイン</a>
-            <a class="navbar-brand" href="{% url 'accounts:us_regist' %}">新規ユーザー登録</a>
-            <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
-            {% endif %}
-        </nav>
+        <form action="" method="POST">{% csrf_token %}
+            <table>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="{% url 'accounts:home' %}">ホーム画面</a>
+                    {% if user.is_authenticated %}
+                    <a class="navbar-brand" href="{% url 'accounts:us_logout' %}">ログアウト</a>
+                    <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
+                    <a class="navbar-brand" href="{% url 'accounts:cyumon_info' %}">注文情報へ</a>
+                    {% else %}
+                    <a class="navbar-brand" href="{% url 'accounts:us_login' %}">ログイン</a>
+                    <a class="navbar-brand" href="{% url 'accounts:us_regist' %}">新規ユーザー登録</a>
+                    <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
+                    {% endif %}
+                </nav>
+            </table>
+        </form>
         {% if messages %}
             <ul>
                 {% for message in messages %}
