--- a/kikakusyo_project/templates/base.html
+++ b/kikakusyo_project/templates/base.html
@@ -11,12 +11,12 @@
                     <a class="navbar-brand" href="{% url 'accounts:home' %}">ホーム画面</a>
                     {% if user.is_authenticated %}
                     <a class="navbar-brand" href="{% url 'accounts:us_logout' %}">ログアウト</a>
-                    <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
-                    <a class="navbar-brand" href="{% url 'accounts:cyumon_info' %}">注文情報へ</a>
+                    <a class="navbar-brand" href="{% url 'hotel:hotel_search' %}">ホテル検索</a>
+                    <a class="navbar-brand" href="{% url 'hotel:cyumon_info' %}">注文情報へ</a>
                     {% else %}
                     <a class="navbar-brand" href="{% url 'accounts:us_login' %}">ログイン</a>
                     <a class="navbar-brand" href="{% url 'accounts:us_regist' %}">新規ユーザー登録</a>
-                    <a class="navbar-brand" href="{% url 'accounts:hotel_research' %}">ホテル検索</a>
+                    <a class="navbar-brand" href="{% url 'hotel:hotel_search' %}">ホテル検索</a>
                     {% endif %}
                 </nav>
             </table>
