--- a/kikakusyo_project/templates/us_info.html
+++ b/kikakusyo_project/templates/us_info.html
@@ -3,6 +3,6 @@
 <form method="POST" style="text-align: center;">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="ユーザー登録確定">
+    <input type="submit" value="ユーザー情報更新">
 </form>
 {% endblock %}
