--- a/kikakusyo_project/templates/base.html
+++ b/kikakusyo_project/templates/base.html
@@ -5,23 +5,31 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <style>
+            .navbar-nav .nav-item {
+                margin-left: 15px;
+            }
+        </style>
     </head>
     <body>
         <form action="" method="POST">{% csrf_token %}
-            <table>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="navbar-nav w-100 justify-content-end">
                     <a class="navbar-brand" href="{% url 'accounts:home' %}">ホーム画面</a>
                     {% if user.is_authenticated %}
-                    <a class="navbar-brand" href="{% url 'accounts:us_logout' %}">ログアウト</a>
-                    <a class="navbar-brand" href="{% url 'hotel:hotel_search' %}">ホテル検索</a>
-                    <a class="navbar-brand" href="{% url 'hotel:cyumon_info' %}">注文情報へ</a>
+                        <div class="top-links">
+                        <a class="navbar-brand" href="{% url 'accounts:us_logout' %}">ログアウト</a>
+                        {% comment %} <a class="navbar-brand" href="{% url 'accounts:us_info' %}">ユーザー情報</a> {% endcomment %}
+                        <a class="navbar-brand" href="{% url 'hotel:hotel_search' %}">ホテル検索</a>
+                        <a class="navbar-brand" href="{% url 'hotel:cyumon_info' %}">注文情報へ</a>
                     {% else %}
-                    <a class="navbar-brand" href="{% url 'accounts:us_login' %}">ログイン</a>
-                    <a class="navbar-brand" href="{% url 'accounts:us_regist' %}">新規ユーザー登録</a>
-                    <a class="navbar-brand" href="{% url 'hotel:hotel_search' %}">ホテル検索</a>
+                        <div class="top-links">
+                        <a class="navbar-brand" href="{% url 'accounts:us_login' %}">ログイン</a>
+                        <a class="navbar-brand" href="{% url 'accounts:us_regist' %}">新規ユーザー登録</a>
+                        <a class="navbar-brand" href="{% url 'hotel:hotel_search' %}">ホテル検索</a>
                     {% endif %}
-                </nav>
-            </table>
+                </div>
+            </nav>
         </form>
         {% if messages %}
             <ul>
@@ -33,3 +41,18 @@
         {% block content %}{% endblock %}
     </body>
 </html>
+
+{% comment %} {% block extra_css %}
+<style>
+    .top-links {
+        display: flex;
+        justify-content: flex-end;
+        padding: 10px;
+    }
+    .top-links a {
+        margin-left: 10px;
+        text-decoration: none;
+        color: #333;
+    }
+</style>
+{% endblock%} {% endcomment %}
