--- a/kikakusyo_project/templates/home.html
+++ b/kikakusyo_project/templates/home.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>こんにちは。こちらはホーム画面です。</h1>
+<h1 style="text-align: center;">こんにちは。こちらはホーム画面です。</h1>
 {% endblock %}
