--- a/kikakusyo_project/templates/us_login.html
+++ b/kikakusyo_project/templates/us_login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="POST">
+<form method="POST" style="text-align: center;">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="ログイン">
